--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="result_field">
             <div class="result_images">
                 <span class="user_result">
-                    <img src="./rock.png" alt="">
+                    <img src="rock.png" alt="">
                 </span>
                 <span class="cpu_result">
-                    <img src="./rock.png" alt="">
+                    <img src="rock.png" alt="">
                 </span>
             </div>
             <div class="result">
@@ -24,15 +24,15 @@
 
         <div class="option_images">
             <span class="option_image">
-                <img src="./rock.png" alt="">
+                <img src="rock.png" alt="">
                 <p>Rock</p>
             </span>
             <span class="option_image">
-                <img src="./paper.png" alt="">
+                <img src="paper.png" alt="">
                 <p>Paper</p>
             </span>
             <span class="option_image">
-                <img src="./scissors.png" alt="">
+                <img src="scissors.png" alt="">
                 <p>Scissors</p>
             </span>
         </div>
